add social media links

--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   </head>
   <main>
     <nav>
       <div id="menu-button">☰</div>
       <img id="logo" src="assets/logo.svg"/>
+      <a href="https://www.google.com/maps/@40.0146055,-83.0112399,20z">
+        <i class="fas fa-map-marker-alt"></i>
+      </a>
+      <a href="tel:+16145566202">
+        <i class="fas fa-phone"></i>
+      </a>
+      <a href="https://www.facebook.com">
+      <i class="fab fa-facebook-square"></i>
+      </a>
     </nav>
     <div style="width:100%">
       <div id="drawer">
@@ -18,9 +28,7 @@
     </div>
     <div id="view">
     </div>
-    <div id="address">
-      <p>2570 N High St</p><p>Columbus,OH 43202</p>
-    </div>
+
   </main>
   <script type="module" src="js.js"></script>
 </html>
