--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <i class="fas fa-phone"></i>
       </a>
       <a href="https://www.facebook.com">
-      <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-facebook-square"></i>
       </a>
     </nav>
     <div style="width:100%">
@@ -27,6 +27,15 @@
       </div>
     </div>
     <div id="view">
+      <div id="hours">
+        <p>Monday:closed</p> 
+        <p>Tuesday:11am-12am</p> 
+        <p>Wednesday:11am-12am</p> 
+        <p>Thursday:11am-12am</p> 
+        <p>Friday:1pm-1am</p> 
+        <p>Saturday:1pm-1am</p>  
+        <p>Sunday:1pm-12am</p>  
+      </div>
     </div>
 
   </main>
