--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
     <nav>
       <div id="menu-button">☰</div>
       <img id="logo" src="assets/logo.svg"/>
-      <a href="https://www.google.com/maps/@40.0146055,-83.0112399,20z">
+      <a href="https://wego.here.com/directions/mylocation/e-eyJuYW1lIjoiS2Fib2IgVGltZSIsImFkZHJlc3MiOiIyNTcwIG5vcnRoIGhpZ2ggc3RyZWV0LCBDb2x1bWJ1cywgT2hpbyIsImxhdGl0dWRlIjo0MC4wMTQ3OSwibG9uZ2l0dWRlIjotODMuMDExMDIsInByb3ZpZGVyTmFtZSI6ImZhY2Vib29rIiwicHJvdmlkZXJJZCI6MjE4MjY1ODM4NzQ4Nzk5fQ==?map=40.01479,-83.01102,15,normal&ref=facebook&link=addresses&fb_locale=en_GB">
         <i class="fas fa-map-marker-alt"></i>
       </a>
       <a href="tel:+16145566202">
         <i class="fas fa-phone"></i>
       </a>
-      <a href="https://www.facebook.com">
+      <a href="https://www.facebook.com/Kabob-Time-218265838748799/">
         <i class="fab fa-facebook-square"></i>
+      </a>
+      <a href="https://www.yelp.com/biz/kabob-time-columbus">
+        <i class="fab fa-yelp"></i>
       </a>
     </nav>
     <div style="width:100%">
