switch map link to googlemaps

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <div id="menu-button">☰</div>
       <img id="logo" src="assets/logo.svg"/>
-      <a href="https://wego.here.com/directions/mylocation/e-eyJuYW1lIjoiS2Fib2IgVGltZSIsImFkZHJlc3MiOiIyNTcwIG5vcnRoIGhpZ2ggc3RyZWV0LCBDb2x1bWJ1cywgT2hpbyIsImxhdGl0dWRlIjo0MC4wMTQ3OSwibG9uZ2l0dWRlIjotODMuMDExMDIsInByb3ZpZGVyTmFtZSI6ImZhY2Vib29rIiwicHJvdmlkZXJJZCI6MjE4MjY1ODM4NzQ4Nzk5fQ==?map=40.01479,-83.01102,15,normal&ref=facebook&link=addresses&fb_locale=en_GB">
+      <a href="https://www.google.com/maps/place/Kabob+Time+Mediterranean+food/@40.0148058,-83.0133975,17z/data=!3m1!4b1!4m5!3m4!1s0x88388d573f7fd2e9:0x536d96d277e1b310!8m2!3d40.0148017!4d-83.0112088">
         <i class="fas fa-map-marker-alt"></i>
       </a>
       <a href="tel:+16145566202">
