add home link to logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <main>
     <nav>
       <div id="menu-button">☰</div>
+      <a href="https://kabob-time-columbus.netlify.com">
       <img id="logo" src="assets/logo.svg"/>
+      </a>
       <a href="https://www.google.com/maps/place/Kabob+Time+Mediterranean+food/@40.0148058,-83.0133975,17z/data=!3m1!4b1!4m5!3m4!1s0x88388d573f7fd2e9:0x536d96d277e1b310!8m2!3d40.0148017!4d-83.0112088">
         <i class="fas fa-map-marker-alt"></i>
       </a>
