update menu and hours

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <div id="view">
       <div id="hours">
         <p>Monday:closed</p> 
-        <p>Tuesday:11am-12am</p> 
-        <p>Wednesday:11am-12am</p> 
-        <p>Thursday:11am-12am</p> 
+        <p>Tuesday:12pm-12am</p> 
+        <p>Wednesday:12pm-12am</p> 
+        <p>Thursday:12pm-12am</p> 
         <p>Friday:1pm-1am</p> 
         <p>Saturday:1pm-1am</p>  
-        <p>Sunday:1pm-12am</p>  
+        <p>Sunday:1pm-10pm</p>  
       </div>
     </div>
 
